nacos整合spring cloud,实现注册中心，配置中心，网关分配三大功能

--- a/provide_server1/src/main/resources/bootstrap.properties
+++ b/provide_server1/src/main/resources/bootstrap.properties
@@ -1,2 +1,20 @@
-spring.application.name=nacos-provide1
+#config 的参数配置文件
+#nacos 的 配置中心的参数设置 需写在 bootstrap.properties 中
+#服务名字
+spring.application.name=provide_server1
+#配置中心的url
 spring.cloud.nacos.config.server-addr=127.0.0.1:8848
+#配置文件类型
+spring.cloud.nacos.config.file-extension=properties
+#group-id
+spring.cloud.nacos.config.group=DEFAULT_GROUP
+#最大重试次数
+spring.cloud.nacos.config.max-retry=10
+#开启自动刷新
+spring.cloud.nacos.config.auto-refresh=true
+#重试时间
+spring.cloud.nacos.config.config-retry-time=2333
+#配置监听长轮询超时时间
+spring.cloud.nacos.config.config-long-poll-timeout=46000
+#开启注册监听器预加载配置服务（除非特殊业务需求，否则不推荐打开该参数）
+nacos.config.enable-remote-sync-config=true
