--- a/provide_server1/src/main/resources/application.properties
+++ b/provide_server1/src/main/resources/application.properties
@@ -1,6 +1,20 @@
-server.port=5010
-spring.application.name=nacos-provide1
-spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#nacos 基础服务的参数配置文件
+# 项目启动时就会去配置中心去读取配置信息
+# （本地的配置文件application.properties还能用，但优先级低于配置中心的配置）
+#server.port=5010
+#spring.application.name=nacos-provide1
+#spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
+#
+## 数据源
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/banyechan?characterEncoding=utf8&useSSL=false
+## mybaits 模块配置
+#mybatis.mapper-locations=classpath:mapper/*.xml
+#mybatis.type-aliases-package=com.banyechan.nacos.provide_server.entity
+#
+#banyechan.nacos.message=welcome to 北京
 
 
 
