--- a/consumer_server1/pom.xml
+++ b/consumer_server1/pom.xml
@@ -3,15 +3,6 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <!--
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.4.RELEASE</version>
-        <relativePath/>
-    </parent>
-        -->
-
     <parent>
         <groupId>com.banyechan.nacos</groupId>
         <artifactId>nacos_server</artifactId>
@@ -23,6 +14,7 @@
     <artifactId>consumer_server1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>consumer_server1</name>
+    <packaging>jar</packaging>
     <description>Demo project for Spring Boot</description>
 
     <properties>
