--- a/provide_server2/pom.xml
+++ b/provide_server2/pom.xml
@@ -28,6 +28,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.banyechan.nacos</groupId>
+            <artifactId>server_feign</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
