--- a/server_feign/pom.xml
+++ b/server_feign/pom.xml
@@ -2,6 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.banyechan.nacos</groupId>
         <artifactId>nacos_server</artifactId>
@@ -10,10 +11,9 @@
     </parent>
 
     <groupId>com.banyechan.nacos</groupId>
-    <artifactId>consumer_server2</artifactId>
+    <artifactId>server_feign</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>consumer_server2</name>
-    <packaging>jar</packaging>
+    <name>server_feign</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
@@ -27,15 +27,13 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
     </dependencies>
 
